src/main/default/objects/Commande__c/Commande__c.object-meta.xml
<CustomObject>
    <label>Commande</label>
    <nameField>
        <label>Commande Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commandes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>