src/main/default/objects/Commande__c/fields/Adresse_d_expedition__c.field-meta.xml
<CustomField>
    <fullName>Adresse_d_expedition__c</fullName>
    <label>Adresse d'expédition</label>
    <type>Text</type>
    <length>255</length>
</CustomField>