src/main/default/objects/Commande__c/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commandes</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>