src/main/default/objects/Commande__c/fields/Frais_d_expedition__c.field-meta.xml
<CustomField>
    <fullName>Frais_d_expedition__c</fullName>
    <label>frais dexpedition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>