src/main/default/objects/Commande__c/fields/Nom__c.field-meta.xml
<CustomField>
    <fullName>Nom__c</fullName>
    <label>Nom</label>
    <length>18</length>
    <type>Text</type>
</CustomField>