src/main/default/objects/Commande__c/fields/Nombre_d_articles__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_articles__c</fullName>
    <label>Nombre d’articles</label>
    <type>AutoNumber</type>
</CustomField>