src/main/default/objects/Commande__c/fields/Poids_calcul__c.field-meta.xml
<CustomField>
    <fullName>Poids_calcul__c</fullName>
    <label>Poids calculé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>