src/main/default/objects/Commande__c/fields/Poids_total__c.field-meta.xml
<CustomField>
    <fullName>Poids_total__c</fullName>
    <label>Poids total</label>
    <type>AutoNumber</type>
</CustomField>