src/main/default/objects/Commande__c/fields/Quantite_articles__c.field-meta.xml
<CustomField>
    <fullName>Quantite_articles__c</fullName>
    <label>Quantité d’articles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>