src/main/default/objects/Commande__c/fields/R_gion__c.field-meta.xml
<CustomField>
    <fullName>R_gion__c</fullName>
    <label>Région</label>
    <length>18</length>
    <type>Text</type>
</CustomField>