src/main/default/objects/Commande__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>ShippingAddress</label>
    <length>18</length>
    <type>Text</type>
</CustomField>