src/main/default/objects/Commande__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transporter</label>
    <referenceTo>Transporter__c</referenceTo>
    <relationshipLabel>Commandes</relationshipLabel>
    <relationshipName>Commandes</relationshipName>
    <type>Lookup</type>
</CustomField>