src/main/default/objects/Commande__c/fields/Type_de_client__c.field-meta.xml
<CustomField>
    <fullName>Type_de_client__c</fullName>
    <label>Type de client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>